--- a/.github/workflows/Call_workflow.yaml
+++ b/.github/workflows/Call_workflow.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   trigger-workflow:
-    uses: /.github/workflows/Reusable_workflow.yaml
+    uses: ./.github/workflows/Reusable_workflow.yaml
     with:
       mysql-version: '8.0'
       new-database: 'my_dynamic_db'
