--- a/.github/workflows/Reusable_workflow.yaml
+++ b/.github/workflows/Reusable_workflow.yaml
@@ -1,7 +1,7 @@
 name: Reusable MySQL Workflow
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       mysql-version:
         description: 'MySQL version to use'
