--- a/.github/workflows/Call_workflow.yaml
+++ b/.github/workflows/Call_workflow.yaml
@@ -1,9 +1,9 @@
 name: call_workflow
 
 on:
-  push:
-    branches:
-      - main  # Adjust this to the branch you want to trigger this workflow
+  workflow_dispatch:
+    # branches:
+    #  - main  # Adjust this to the branch you want to trigger this workflow
 
 jobs:
   trigger-workflow:
