--- a/.github/workflows/Call_reusable_wf_n_use_its_op.yaml
+++ b/.github/workflows/Call_reusable_wf_n_use_its_op.yaml
@@ -5,7 +5,8 @@ on:
 
 jobs:
   job1:
-    uses: ./.github/workflows/reusable.yml
+    uses: ./.github/workflows/reusable_output.yaml
+    
 
   job2:
     runs-on: ubuntu-latest
